Use 3.o update and added a reqirement.txt

--- a/ErRedTops.ipynb
+++ b/ErRedTops.ipynb
@@ -388,62 +388,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Offical automation for ER redtops to scan for tracking\"\"\"\n",
+    "# \"\"\"Offical automation for ER redtops to scan for tracking\"\"\"\n",
     "\n",
-    "from selenium import webdriver\n",
-    "from selenium.webdriver.common.by import By\n",
-    "from selenium.webdriver.common.action_chains import ActionChains\n",
-    "from selenium.webdriver.support.ui import WebDriverWait\n",
-    "from selenium.webdriver.support import expected_conditions as EC\n",
-    "from datetime import datetime\n",
-    "import time\n",
+    "# from selenium import webdriver\n",
+    "# from selenium.webdriver.common.by import By\n",
+    "# from selenium.webdriver.common.action_chains import ActionChains\n",
+    "# from selenium.webdriver.support.ui import WebDriverWait\n",
+    "# from selenium.webdriver.support import expected_conditions as EC\n",
+    "# from datetime import datetime\n",
+    "# import time\n",
     "\n",
-    "def main():\n",
-    "    edge_driver_path = r'C:\\Users\\s176444\\Downloads\\edgedriver_win32\\msedgedriver.exe'\n",
+    "# def main():\n",
+    "#     edge_driver_path = r'C:\\Users\\s176444\\Downloads\\edgedriver_win32\\msedgedriver.exe'\n",
     "    \n",
-    "    driver = webdriver.Edge(executable_path=edge_driver_path)\n",
-    "    driver.get(\"https://forms.office.com/pages/responsepage.aspx?id=xHuKPzfjpUeg_A1RLA4F8dP8_fMEmf1GnO1IU2HCna5UNEJHU0JVRzFSMVpNV0pOT0tFQVpHUFVQNi4u\")\n",
+    "#     driver = webdriver.Edge(executable_path=edge_driver_path)\n",
+    "#     driver.get(\"https://forms.office.com/pages/responsepage.aspx?id=xHuKPzfjpUeg_A1RLA4F8dP8_fMEmf1GnO1IU2HCna5UNEJHU0JVRzFSMVpNV0pOT0tFQVpHUFVQNi4u\")\n",
     "    \n",
-    "    wait = WebDriverWait(driver, 10)\n",
+    "#     wait = WebDriverWait(driver, 10)\n",
     "\n",
-    "    fill_date(driver, wait)\n",
-    "    fill_code_collected_by(driver, wait)\n",
-    "    click_submit(driver, wait)\n",
+    "#     fill_date(driver, wait)\n",
+    "#     fill_code_collected_by(driver, wait)\n",
+    "#     click_submit(driver, wait)\n",
     "\n",
-    "    driver.quit()\n",
+    "#     driver.quit()\n",
     "\n",
-    "    print(\"Success: Entire task completed!\")\n",
+    "#     print(\"Success: Entire task completed!\")\n",
     "\n",
-    "def fill_date(driver, wait):\n",
-    "    date_input = wait.until(EC.presence_of_element_located((By.XPATH, '/html/body/div[1]/div/div[1]/div/div/div[3]/div/div/div[2]/div[2]/div[2]/div[2]/div/div/div/div/div/input')))\n",
-    "    current_date_str = datetime.now().strftime(\"%m/%d/%Y\")\n",
-    "    date_input.clear()\n",
-    "    date_input.send_keys(current_date_str)\n",
+    "# def fill_date(driver, wait):\n",
+    "#     date_input = wait.until(EC.presence_of_element_located((By.XPATH, '/html/body/div[1]/div/div[1]/div/div/div[3]/div/div/div[2]/div[2]/div[2]/div[2]/div/div/div/div/div/input')))\n",
+    "#     current_date_str = datetime.now().strftime(\"%m/%d/%Y\")\n",
+    "#     date_input.clear()\n",
+    "#     date_input.send_keys(current_date_str)\n",
     "\n",
-    "def fill_code_collected_by(driver, wait):\n",
-    "    code_collected_by_input = wait.until(EC.presence_of_element_located((By.XPATH, '/html/body/div[1]/div/div[1]/div/div/div[3]/div/div/div[2]/div[2]/div[3]/div[2]/div/span/input')))\n",
-    "    code_collected_by_input.clear()\n",
-    "    code_collected_by_input.send_keys(\"ERCOLLECT\")\n",
+    "# def fill_code_collected_by(driver, wait):\n",
+    "#     code_collected_by_input = wait.until(EC.presence_of_element_located((By.XPATH, '/html/body/div[1]/div/div[1]/div/div/div[3]/div/div/div[2]/div[2]/div[3]/div[2]/div/span/input')))\n",
+    "#     code_collected_by_input.clear()\n",
+    "#     code_collected_by_input.send_keys(\"ERCOLLECT\")\n",
     "\n",
-    "def click_submit(driver, wait):\n",
-    "    onsubmit_end = wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div/div/div[1]/div/div/div[3]/div/div/div[2]/div[3]/div/button')))\n",
-    "    # Scroll the element into view\n",
-    "    driver.execute_script(\"arguments[0].scrollIntoView(true);\", onsubmit_end)\n",
-    "    time.sleep(2)\n",
+    "# def click_submit(driver, wait):\n",
+    "#     onsubmit_end = wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div/div/div[1]/div/div/div[3]/div/div/div[2]/div[3]/div/button')))\n",
+    "#     # Scroll the element into view\n",
+    "#     driver.execute_script(\"arguments[0].scrollIntoView(true);\", onsubmit_end)\n",
+    "#     time.sleep(2)\n",
     "    \n",
-    "    # Attempt clicking using ActionChains\n",
-    "    try:\n",
-    "        actions = ActionChains(driver)\n",
-    "        actions.move_to_element(onsubmit_end).click().perform()\n",
-    "        time.sleep(5)  # Holding for 10 seconds\n",
-    "        print(\"Success: Button clicked successfully!\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error: Failed to click the button. Reason: {str(e)}\")\n",
-    "        # Fallback to JavaScript click if ActionChains fail\n",
-    "        driver.execute_script(\"arguments[0].click();\", onsubmit_end)\n",
+    "#     # Attempt clicking using ActionChains\n",
+    "#     try:\n",
+    "#         actions = ActionChains(driver)\n",
+    "#         actions.move_to_element(onsubmit_end).click().perform()\n",
+    "#         time.sleep(5)  # Holding for 10 seconds\n",
+    "#         print(\"Success: Button clicked successfully!\")\n",
+    "#     except Exception as e:\n",
+    "#         print(f\"Error: Failed to click the button. Reason: {str(e)}\")\n",
+    "#         # Fallback to JavaScript click if ActionChains fail\n",
+    "#         driver.execute_script(\"arguments[0].click();\", onsubmit_end)\n",
     "\n",
-    "if __name__ == '__main__':\n",
-    "    main()\n"
+    "# if __name__ == '__main__':\n",
+    "#     main()\n"
    ]
   }
  ],
