--- a/Officalautomationredtops.ipynb
+++ b/Officalautomationredtops.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\s176444\\Downloads\\ErRedTubes\\Officalautomationredtops.ipynb Cell 1\u001b[0m line \u001b[0;36m5\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m         driver\u001b[39m.\u001b[39mexecute_script(\u001b[39m\"\u001b[39m\u001b[39marguments[0].click();\u001b[39m\u001b[39m\"\u001b[39m, onsubmit_end)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m__name__\u001b[39m \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39m__main__\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=55'>56</a>\u001b[0m     main()\n",
+      "\u001b[1;32mc:\\Users\\s176444\\Downloads\\ErRedTubes\\Officalautomationredtops.ipynb Cell 1\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m fill_date(driver, wait)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m fill_code_collected_by(driver, wait)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m click_submit(driver, wait)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m driver\u001b[39m.\u001b[39mquit()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSuccess: Entire task completed!\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32mc:\\Users\\s176444\\Downloads\\ErRedTubes\\Officalautomationredtops.ipynb Cell 1\u001b[0m line \u001b[0;36m4\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=45'>46</a>\u001b[0m     actions \u001b[39m=\u001b[39m ActionChains(driver)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=46'>47</a>\u001b[0m     actions\u001b[39m.\u001b[39mmove_to_element(onsubmit_end)\u001b[39m.\u001b[39mclick()\u001b[39m.\u001b[39mperform()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=47'>48</a>\u001b[0m     time\u001b[39m.\u001b[39;49msleep(\u001b[39m5\u001b[39;49m)  \u001b[39m# Holding for 10 seconds\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=48'>49</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mSuccess: Button clicked successfully!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/Officalautomationredtops.ipynb#W0sZmlsZQ%3D%3D?line=49'>50</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "\"\"\"Offical automation for ER redtops to scan for tracking\"\"\"\n",
     "\n",
@@ -22,7 +36,7 @@
     "    driver = webdriver.Edge(executable_path=edge_driver_path)\n",
     "    driver.get(\"https://forms.office.com/pages/responsepage.aspx?id=xHuKPzfjpUeg_A1RLA4F8dP8_fMEmf1GnO1IU2HCna5UNEJHU0JVRzFSMVpNV0pOT0tFQVpHUFVQNi4u\")\n",
     "    \n",
-    "    wait = WebDriverWait(driver, 10)\n",
+    "    wait = WebDriverWait(driver, 6)\n",
     "\n",
     "    fill_date(driver, wait)\n",
     "    fill_code_collected_by(driver, wait)\n",
@@ -63,6 +77,103 @@
     "if __name__ == '__main__':\n",
     "    main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success: Button clicked successfully!\n",
+      "Success: Button clicked successfully!\n",
+      "Success: Button clicked successfully!\n",
+      "Success: Button clicked successfully!\n",
+      "Success: Button clicked successfully!\n",
+      "Success: Button clicked successfully!\n",
+      "Success: Button clicked successfully!\n",
+      "Success: Button clicked successfully!\n",
+      "Manual break detected. Exiting the loop.\n",
+      "Success: Entire task completed!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"Update 3.0 to loop over the forum survey as many times with a breakpoint max limit. \"\"\"\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from datetime import datetime\n",
+    "import sys\n",
+    "import time\n",
+    "\n",
+    "def main():\n",
+    "    edge_driver_path = r'C:\\Users\\s176444\\Downloads\\edgedriver_win32\\msedgedriver.exe'\n",
+    "\n",
+    "    driver = webdriver.Edge(executable_path=edge_driver_path)\n",
+    "    driver.get(\"https://forms.office.com/pages/responsepage.aspx?id=xHuKPzfjpUeg_A1RLA4F8dP8_fMEmf1GnO1IU2HCna5UNEJHU0JVRzFSMVpNV0pOT0tFQVpHUFVQNi4u\")\n",
+    "\n",
+    "    wait = WebDriverWait(driver, 5)  # Increase the wait time if needed\n",
+    "\n",
+    "    max_attempts = 8  # set the maximum number of iterations, change as required\n",
+    "    attempts = 0\n",
+    "\n",
+    "    while attempts < max_attempts:\n",
+    "        try:\n",
+    "            fill_date(driver, wait)\n",
+    "            time.sleep(1)  # Add a 2-second delay after filling the date\n",
+    "            fill_code_collected_by(driver, wait)\n",
+    "            time.sleep(1)  # Add a 2-second delay after filling the code\n",
+    "            click_submit(driver, wait)\n",
+    "            time.sleep(3)  # Add a 5-second delay after clicking the submit button\n",
+    "\n",
+    "            click_new_submission(driver, wait)\n",
+    "            time.sleep(5)  # Add a 3-second delay after clicking new submission\n",
+    "            attempts += 1\n",
+    "        except KeyboardInterrupt:\n",
+    "            print(\"Manual break detected. Exiting the loop.\")\n",
+    "            break\n",
+    "        except Exception as e:\n",
+    "            print(f\"An error occurred: {str(e)}\")\n",
+    "            sys.exit(1)\n",
+    "\n",
+    "    driver.quit()\n",
+    "    print(\"Success: Entire task completed!\")\n",
+    "\n",
+    "def fill_date(driver, wait):\n",
+    "    date_input = wait.until(EC.presence_of_element_located((By.XPATH, '/html/body/div[1]/div/div[1]/div/div/div[3]/div/div/div[2]/div[2]/div[2]/div[2]/div/div/div/div/div/input')))\n",
+    "    current_date_str = datetime.now().strftime(\"%m/%d/%Y\")\n",
+    "    date_input.clear()\n",
+    "    date_input.send_keys(current_date_str)\n",
+    "\n",
+    "def fill_code_collected_by(driver, wait):\n",
+    "    code_collected_by_input = wait.until(EC.presence_of_element_located((By.XPATH, '/html/body/div[1]/div/div[1]/div/div/div[3]/div/div/div[2]/div[2]/div[3]/div[2]/div/span/input')))\n",
+    "    code_collected_by_input.clear()\n",
+    "    code_collected_by_input.send_keys(\"ERCOLLECT\")\n",
+    "\n",
+    "def click_submit(driver, wait):\n",
+    "    onsubmit_end = wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div/div/div[1]/div/div/div[3]/div/div/div[2]/div[3]/div/button')))\n",
+    "    driver.execute_script(\"arguments[0].scrollIntoView(true);\", onsubmit_end)\n",
+    "    try:\n",
+    "        actions = ActionChains(driver)\n",
+    "        actions.move_to_element(onsubmit_end).click().perform()\n",
+    "        print(\"Success: Button clicked successfully!\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error: Failed to click the button. Reason: {str(e)}\")\n",
+    "        driver.execute_script(\"arguments[0].click();\", onsubmit_end)\n",
+    "\n",
+    "def click_new_submission(driver, wait):\n",
+    "    new_submission_link = wait.until(EC.element_to_be_clickable((By.XPATH, '/html/body/div/div/div[1]/div/div/div[3]/div/div/div[2]/div[2]/div[2]/a')))\n",
+    "    driver.execute_script(\"arguments[0].scrollIntoView(true);\", new_submission_link)\n",
+    "    driver.execute_script(\"arguments[0].click();\", new_submission_link)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n"
+   ]
   }
  ],
  "metadata": {
@@ -72,7 +183,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.4"
   },
   "orig_nbformat": 4
