--- a/ErRedTops.ipynb
+++ b/ErRedTops.ipynb
@@ -445,6 +445,87 @@
     "# if __name__ == '__main__':\n",
     "#     main()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "System Information:\n",
+      "Operating System: Windows\n",
+      "OS Version: 10\n",
+      "CPU: Intel64 Family 6 Model 151 Stepping 5, GenuineIntel (6 cores)\n",
+      "RAM: 15.71 GB\n",
+      "Disk: 237.67 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import platform\n",
+    "import psutil\n",
+    "\n",
+    "def get_system_info():\n",
+    "    system_info = {\n",
+    "        \"Operating System\": platform.system(),\n",
+    "        \"OS Version\": platform.release(),\n",
+    "        \"CPU\": f\"{platform.processor()} ({psutil.cpu_count(logical=False)} cores)\",\n",
+    "        \"RAM\": f\"{round(psutil.virtual_memory().total / (1024**3), 2)} GB\",\n",
+    "        \"Disk\": f\"{round(psutil.disk_usage('/').total / (1024**3), 2)} GB\",\n",
+    "    }\n",
+    "\n",
+    "    return system_info\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    system_info = get_system_info()\n",
+    "    print(\"System Information:\")\n",
+    "    for key, value in system_info.items():\n",
+    "        print(f\"{key}: {value}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'insert'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\s176444\\Downloads\\ErRedTubes\\ErRedTops.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/ErRedTops.ipynb#X14sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m rev_list \u001b[39m=\u001b[39m []\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/ErRedTops.ipynb#X14sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mfor\u001b[39;00m rev_list \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(my_list)):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/ErRedTops.ipynb#X14sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     rev_list\u001b[39m.\u001b[39;49minsert(\u001b[39m0\u001b[39m, my_list[rev_list])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/ErRedTops.ipynb#X14sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m     \u001b[39mprint\u001b[39m(rev_list)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/s176444/Downloads/ErRedTubes/ErRedTops.ipynb#X14sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m# Example usage:\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'int' object has no attribute 'insert'"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse_string(s):\n",
+    "    \"\"\"\n",
+    "    Reverse a list of characters in-place.\n",
+    "\n",
+    "    Args:\n",
+    "    s (List[str]): A list of characters.\n",
+    "\n",
+    "    Returns:\n",
+    "    None\n",
+    "    \"\"\"\n",
+    "    # Your code goes here\n",
+    "my_list = [\"h\", \"e\", \"l\", \"l\", \"o\"]\n",
+    "rev_list = []\n",
+    "\n",
+    "for rev_list in range(len(my_list)):\n",
+    "    rev_list.insert(0, my_list[rev_list])\n",
+    "    print(rev_list)\n",
+    "# Example usage:\n",
+    "my_list = [\"h\", \"e\", \"l\", \"l\", \"o\"]\n",
+    "reverse_string(my_list)\n",
+    "print(my_list)  # Should print [\"o\", \"l\", \"l\", \"e\", \"h\"]\n"
+   ]
   }
  ],
  "metadata": {
