--- a/Officalautomationredtops.ipynb
+++ b/Officalautomationredtops.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -273,19 +273,28 @@
       "Success: Button clicked successfully!\n",
       "Success: Button clicked successfully!\n",
       "Success: Button clicked successfully!\n",
-      "Manual break detected. Exiting the loop.\n",
+      "Success: Button clicked successfully!\n",
+      "Breakpoint reached after 5 attempts. You can add additional logic here.\n",
+      "Success: Button clicked successfully!\n",
+      "Success: Button clicked successfully!\n",
+      "Success: Button clicked successfully!\n",
+      "Success: Button clicked successfully!\n",
+      "Success: Button clicked successfully!\n",
+      "Breakpoint reached after 10 attempts. You can add additional logic here.\n",
       "Success: Entire task completed!\n"
      ]
     }
    ],
    "source": [
-    "\"\"\"Updated webdrivers so newest 4.0 update release to this script\"\"\"\n",
+    "\"\"\"4.0 update that fixed drivers for edge. constant issue arising\"\"\"\n",
+    "\n",
     "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.action_chains import ActionChains\n",
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.edge.service import Service  # Import the Service class\n",
     "from datetime import datetime\n",
     "import sys\n",
     "import time\n",
@@ -295,12 +304,12 @@
     "\n",
     "    # Initialize the EdgeDriver with the specified path using the Service class\n",
     "    service = Service(executable_path=edge_driver_path)\n",
-    "    driver = webdriver.Edge(service=service)\n",
+    "    driver = webdriver.Edge(service=service)  # Use the Service class for initialization\n",
     "    driver.get(\"https://forms.office.com/pages/responsepage.aspx?id=xHuKPzfjpUeg_A1RLA4F8dP8_fMEmf1GnO1IU2HCna5UNEJHU0JVRzFSMVpNV0pOT0tFQVpHUFVQNi4u\")\n",
     "\n",
-    "    wait = WebDriverWait(driver, 5)  # Increase the wait time if needed\n",
+    "    wait = WebDriverWait(driver, 3)  # Increase the wait time if needed\n",
     "\n",
-    "    max_attempts = 19  # set the maximum number of iterations, change as required\n",
+    "    max_attempts = 10 # set the maximum number of iterations, change as required\n",
     "    breakpoint = 5   # set a breakpoint after this many attempts\n",
     "    attempts = 0\n",
     "\n",
@@ -314,7 +323,7 @@
     "            time.sleep(3)  # Add a 5-second delay after clicking the submit button\n",
     "\n",
     "            click_new_submission(driver, wait)\n",
-    "            time.sleep(5)  # Add a 3-second delay after clicking new submission\n",
+    "            time.sleep(4)  # Add a 3-second delay after clicking new submission\n",
     "            attempts += 1\n",
     "\n",
     "            if attempts % breakpoint == 0:\n",
